--- a/src/Pages/manageCycle/manageCycle.css
+++ b/src/Pages/manageCycle/manageCycle.css
@@ -1,10 +1,10 @@
-.manageItems {
+.manageCycle {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin: 50px;
 }
 
-.manageItems img {
-    width: 10px;
+.image {
+    width: 250px;
 }
