--- a/src/Pages/AllCycle/AllCycle.css
+++ b/src/Pages/AllCycle/AllCycle.css
@@ -1,10 +1,6 @@
-.manageItems {
+.allCycle {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin: 50px;
-}
-
-.manageItems img {
-    width: 10px;
 }
